<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="_investments">+</string>
    <string name="_multiplication">*</string>
    <string name="_subtraction">-</string>
    <string name="_division">/</string>
    <string name="_equals">=</string>
    <string name="_AC">AC</string>
    <string name="_Themes">Themes</string>
    <string name="_backspace">backspace</string>
    <string name="display">Enter in a value</string>
    <string name="_Back">Back</string>
    <string name="light">light</string>
    <string name="dark">Dark</string>
    <string name="theme">Theme</string>
    <string name="text_in_teme_light">Light</string>
    <string name="text_in_teme_dark">Dark</string>


</resources>