<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_big">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_Back"
        style="@style/buton_style"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/enter_margin"
        android:text="@string/_Back" />

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_button_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/size_for_themes"
            android:text="@string/text_in_teme_light" />

        <RadioButton
            android:id="@+id/radioButton_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_button_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/size_for_themes"
            android:text="@string/text_in_teme_dark" />
    </RadioGroup>


</LinearLayout>